2005-03-09  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimptexttool.c (gimp_text_tool_create_vectors_warped):
	make created path visible and active.
	
2005-03-09  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/gimpfu.py: initialize button variable before using
	it in PF_BUTTON code. Fixes bug #169793. Thanks to Joao S. O. Bueno
	Calligaris.

2005-03-10  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpsizeentry.c (gimp_size_entry_show_unit_menu):
	added "Since: GIMP 2.4" to the docs.

	* libgimpwidgets/gimpwidgets.def: added the new symbol.

2005-03-09  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* libgimpwidgets/gimpsizeentry.[ch]: added function
	gimp_size_entry_show_unit_menu() for convenience.

	* app/tools/gimprectangleoptions.[ch]
	* app/tools/gimprectangletool.[ch]:  more work on 
	controls in Tool Options.  Can now resize rectangle 
	by dragging any corner or edge -- move rectangle by
	clicking inside and dragging.

2005-03-09  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontainerview.c
	* app/widgets/gimpimagedock.c
	* app/widgets/gimptoolbox.c
	* app/widgets/gtkwrapbox.c
	* libgimpwidgets/gimpcellrenderercolor.c
	* libgimpwidgets/gimpcellrenderertoggle.c
	* libgimpwidgets/gimpframe.c: use canonical names when registering
	param specs.

2005-03-09  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/vectors/gimpvectors-warp.c
	* app/vectors/gimpvectors-warp.h: new files implementing
	"path along a path" functionality.

	* app/vectors/Makefile.am: new stuff added
	
	* gimp/app/vectors/gimpvectors.[ch]: actually implement
	gimp_vectors_real_stroke_get_length().

	* app/tools/gimptexttool.c
	* app/tools/gimptextoptions.c: first pass at "text
	along a path", using new functions.  See bug #169616.

2005-03-09  Sven Neumann  <sven@gimp.org>

	* app/core/gimppalette.[ch]: renamed again, to
	gimp_palette_[gs]et_columns this time.

	* app/dialogs/palette-import-dialog.c
	* app/widgets/gimppaletteeditor.c: changed accordingly.
